# Windbg-MCP

./: .gitignore  README.md  pyproject.toml
docs/: INDEX.md
docs/architecture/: README.md
docs/plan/: README.md  backlog.md
docs/plan/analysis/: mcp-determinism.md
docs/plan/tasks/: mcp-engine-002.md  mcp-integration-004.md  mcp-parser-001.md  mcp-tools-003.md
src/: config.py  server.py
src/debugger/: engine.py  executor.py  native_engine.py
src/tools/: _annotations.py  _evidence.py  _evidence_store.py  _models.py  _parser.py  _registry.py  _response.py  analyze_tool.py  analyze_tools.py  blackbox_tool.py  breakpoint_tool.py  breakpoint_tools.py  context_tool.py  control_tool.py  control_tools.py  disasm_tool.py  disasm_tools.py  eval_tool.py  exec_tool.py  image_verify_tool.py  kernel_tools.py  lookup_tool.py  mapping_tool.py  memory_tool.py  memory_tools.py  module_tool.py  output_tool.py  pool_tool.py  register_tools.py  session_tool.py  stack_tool.py  stack_tools.py  symbol_tools.py  sympath_tool.py  thread_tool.py  type_tools.py
tests/: test_engine.py  test_mcp_contract.py  test_parser.py  test_response.py  test_server.py  test_tools.py
